--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,20 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
-    </dependency></dependencies>
+    </dependency>
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>6.8</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-core</artifactId>
+        <version>5.4.1</version>
+    </dependency>
+</dependencies>
+
     <groupId>org.example</groupId>
     <artifactId>AutomationPractice</artifactId>
     <version>1.0-SNAPSHOT</version>
